# Trabalhos_GCS_PY

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
doxygen-1.9.7/doc_internal/: releases.md
src/: main.py
