[tool.poetry]
name = "trabalhos-gcs-py"
version = "0.1.0"
description = ""
authors = ["Pedro Barcelos <pbarcelos56@icloud.com>"]
readme = "README.md"
packages = [{include = "trabalhos_gcs_py"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
