[tool.poetry]
name = "trabalhos-gcs-py"
version = "0.1.0"
description = ""
authors = ["Pedro Barcelos <pbarcelos56@icloud.com>"]
readme = "README.md"
packages = [{include = "trabalhos_gcs_py"}]

[tool.poetry.dependencies]
python = "^3.9"
altair = "4.2.0"
attrs = "22.2.0"
bpemb = "0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
